fixed gym rewards overflow & added reset values in cancel btn

--- a/src/components/Admin/GymComponent/gymRewards.css
+++ b/src/components/Admin/GymComponent/gymRewards.css
@@ -1,11 +1,14 @@
 @import url('../../../main.css');
 
 .rewards {
+    position: relative;
     background-color: var(--light-bg);
     padding: 10px;
     border: 1px solid rgba(17, 17, 17, 0.2);
     border-radius: 10px;
     height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 
@@ -57,8 +60,8 @@
     flex-direction: column;
     gap: 10px;
     margin-top: 1rem;
-    overflow-y: hidden;
-    height: 100%;
+    /* overflow-y: hidden;
+    height: 100%; */
 }
 
 
@@ -67,7 +70,6 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 10px;
-    overflow-y: auto;
 }
 
 .rewards-items {
