--- a/src/pages/Admin/gym.css
+++ b/src/pages/Admin/gym.css
@@ -13,7 +13,7 @@
 .gym-container {
     margin-top: 1rem;
     position: relative;
-    height: 62%;
+    height: 63%;
     width: 100%;
     /* padding: 10px; */
 }
